test/test-cases/negative/block-errors.pas

Program test(input, output);

Var 
  x : integer;
  y : real;
Function fun(a:boolean) : integer;
Begin
End;
Begin
  fun(x)
End.
